added my Unit 3 project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,49 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <script src="script.js"></script>
-  </body>
+	<header>
+		<h1>Unit 3 Project</h1>
+		<h3>Gallery of my pictures.</h3>
+	</header>
+
+	<main>
+		<h5>Dogs</h5>
+		<picture>
+			<source media="(min-width:769px)" srcset="/images/largedog.jpg">
+			<source media="(min-width:426px)" srcset="/images/mediumdog.jpg">
+			<source media="(min-width:321px)" srcset="/images/smalldog.jpg">
+			<img src="/images/tinydog.jpg" alt="dogs" style="width:auto;">
+    </picture>
+
+  <hr style="width:100%;text-align:left;margin-left:0">
+
+    <h5>Cars</h5>
+    <picture>
+     <source media="(min-width:769px)" srcset="/images/largecar.jpg">
+     <source media="(min-width:426px)" srcset="/images/mediumcar.jpg">
+     <source media="(min-width:321px)" srcset="/images/smallcar.jpg">
+     <img src="/images/tinycar.jpg" alt="dogs" style="width:auto;">
+
+  <hr style="width:100%;text-align:left;margin-left:0">
+
+    <h5>Flowers</h5>
+    <picture>
+     <source media="(min-width:769px)" srcset="/images/largeflower.jpg">
+     <source media="(min-width:426px)" srcset="/images/mediumflower.jpg">
+     <source media="(min-width:321px)" srcset="/images/smallflower.jpg">
+     <img src="/images/tinyflower.jpg" alt="dogs" style="width:auto;">
+
+  <hr style="width:100%;text-align:left;margin-left:0">
+  <br>
+
+  </main>
+
+	<nav>
+  </nav>
+		
+  <footer>
+    &copy; <i>2021 Amy Whitaker</i>
+  </footer>
+
+</body>
 </html>
